<resources>
    <string name="app_name">Xplan</string>
    <string name="team">组局</string>
    <string name="find">发现</string>
    <string name="msg">消息</string>
    <string name="mine">我的</string>
    <string name="logo_msg">一起来更好玩</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="dialog_choose_pic_gallery">从手机相册选择</string>
    <string name="dialog_choose_pic_take_photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="str_recorder_normal">按住说话</string>
    <string name="str_recorder_recording">松开结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消发送</string>
    <string name="report_the_chat_room">举报该聊天室</string>
    <string name="select_reason">请选择你要举报该聊天室的理由</string>
    <string name="sexy">色情</string>
    <string name="spread_bad_info">传播不良信息</string>
    <string name="content_error">内容与实际不符合</string>
    <string name="fraud">存在欺诈行为</string>
    <string name="other">其他</string>
    <string name="report_chat_room">举报聊天室</string>
    <string name="exit_chat_room">退出聊天室</string>
    <string name="exit_shop_chat_room">确定退出聊天室？</string>
    <string name="exit_group_chat_room">确定退出组局？</string>
    <string name="hint_input_msg">请输入消息...</string>
    <string name="hint_input_msg2">请输入您的评论</string>
    <string name="pressed_say">按住说话</string>
    <string name="click_recording">点击录制</string>
    <string name="cancel_send">手指上滑，取消发送</string>
    <string name="loosen_send">松开手指，取消发送</string>
    <string name="send">发送</string>
    <string name="report_group">举报组局</string>
    <string name="exit_group">退出组局</string>
    <string name="join_person_count">报名人数:</string>
    <string name="competed">已结束</string>
    <string name="enter">报名</string>

    <string name="players">玩伴</string>
    <string name="play">好玩</string>
    <string name="find_cp">180cp</string>
    <string name="remove">删除</string>
    <string name="wait_group_sure">等待局长同意</string>
    <string name="wait_confirm">您已提交报名申请。等待局长确认</string>
    <string name="joined">已报名</string>
    <string name="joined_success">报名成功</string>
    <string name="going">进行中</string>
    <string name="finished">已结束</string>
    <string name="dissolution">已解散</string>
    <string name="invitation">邀请好友</string>
    <string name="has_requested">已提交报名申请</string>
    <string name="agree">同意</string>
    <string name="has_agreed">局长同意%S加入</string>
    <string name="tag_is_center">tagIsCenter</string>
    <string name="boy">男生</string>
    <string name="girl">女生</string>
    <string name="all">全部</string>
    <string name="reset">重置</string>
    <string name="tip">提示</string>
    <string name="time_end">时间到~相遇不易，关注对方可以继续给Ta发送消息哦</string>
    <string name="care">关注</string>
    <string name="care_ta">关注Ta</string>
    <string name="cared">已关注</string>
    <string name="exit_room_tip">确定要现在退出房间么?退出房间本次对话将会立即结束</string>
    <string name="other_exit_room_tip">对方已经退出房间，本次聊天已结束</string>
    <string name="confirm_exit_chat_room">确定退出聊天室?</string>
    <string name="tip_chat">不善言语的小伙伴可以参考话题哟</string>

    <string name="publish">发布</string>
    <string name="where">你在哪里</string>
    <string name="open">公开</string>
    <string name="tip_publish_content">点击下方麦克风可以录制音频，点击拍照可以录制小视频哦~</string>
    <string name="all_people_can_see">所有人可见</string>
    <string name="only_see_by_myself">仅自己可见</string>
    <string name="tip_publish_null_content">不能发布视频、照片或文案为空的内容哦</string>
    <string name="i_know">我知道了</string>
    <string name="tip_exit_edit">退出此次编辑?</string>
    <string name="tip_delete_voice">确定要删除此条音频吗?</string>
    <string name="recoreding_voice">录制中</string>
    <string name="recoreding_voice_completed">录制完成</string>
    <string name="playing_voice">播放中</string>
    <string name="playing_voice_end">播放完成</string>
    <string name="all_see">所有人可见</string>
    <string name="only_me_see">仅自己可见</string>
    <string name="login_again">账号已在其他设备登录</string>
    <string name="login_again2">如非本人操作，请联系客服小姐姐~</string>
    <string name="tip_outlogin">确定要退出吗？</string>
    <string name="send_fail">发送失败</string>
</resources>
