<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_report_dialog"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_the_chat_room"
        android:textSize="18sp"
        android:textColor="@color/color_333333"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_reason"
        android:textSize="14sp"
        android:textColor="@color/color_999999"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_one"
        style="@style/Report_button"
        android:text="@string/sexy"/>

    <TextView
        android:id="@+id/tv_two"
        style="@style/Report_button"
        android:text="@string/spread_bad_info"/>

    <TextView
        android:id="@+id/tv_three"
        style="@style/Report_button"
        android:text="@string/content_error"/>

    <TextView
        android:id="@+id/tv_four"
        style="@style/Report_button"
        android:text="@string/fraud"/>

    <TextView
        android:id="@+id/tv_five"
        style="@style/Report_button"
        android:text="@string/other"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_FF396E"
        android:layout_marginTop="21dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel"/>

    </LinearLayout>
</LinearLayout>