<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_circular"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dialog_choose_pic_gallery"
            android:textSize="18sp"
            android:textColor="@color/color_FF396E" />
        <View style="@style/DividerHorizontal" />

        <TextView
            android:id="@+id/tvPhoto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dialog_choose_pic_take_photo"
            android:textSize="18sp"
            android:textColor="@color/color_FF396E" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/shape_circular"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/color_FF396E"/>
</LinearLayout>
