<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/logo_msg"
        android:textColor="@color/color_white"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/login"
        android:textSize="15dp"
        android:textColor="@color/color_white"
        android:background="@color/color_FF396E" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="41dp"
        android:text="@string/register"
        android:textSize="15dp"
        android:textColor="@color/color_white"
        android:background="@color/color_transparent55" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="测试"
        android:visibility="gone" />

</LinearLayout>
