<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="163dp"
        android:background="@drawable/bg_report_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/tip"
            android:textColor="@color/color_333333"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_tip_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="25dp"
            android:text="@string/login_again"
            android:textColor="@color/color_2c2b2b"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:text="@string/login_again2"
            android:textColor="@color/color_2c2b2b"
            android:textSize="13sp" />

        <View
            style="@style/DividerHorizontal"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/color_FF396E"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>