<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="@color/color_white"
            android:textSize="30sp"
            tools:text="肥仔的快乐" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:drawableTop="@drawable/ic_players"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/players"
                android:textColor="@color/color_white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:drawableTop="@drawable/ic_play"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/play"
                android:textColor="@color/color_white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_find_cp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:drawableTop="@drawable/ic_lovers"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/find_cp"
                android:textColor="@color/color_white"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
