<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PublishActivity">
    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical">

        <FrameLayout
            android:id="@+id/fl_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_back_black" />
        </FrameLayout>

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/default_image"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginRight="15dp"
            android:textSize="13sp"
            android:textColor="@color/color_333333"
            android:text="@string/publish"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center"/>
    </RelativeLayout>

    <View
        style="@style/DividerHorizontal"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:textColor="@color/color_333333"
        android:textSize="13sp"
        android:textColorHint="#a7a7a7"
        android:hint="@string/tip_publish_content"
        android:gravity="top"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_location"
            android:layout_width="70dp"
            android:layout_height="18dp"
            android:gravity="center"
            android:background="@drawable/bg_btn_publish"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:textColor="@color/color_a7a7a7"
                android:textSize="10sp"
                android:layout_marginLeft="5dp"
                android:gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_open"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textSize="10sp"
            android:textColor="@color/color_a7a7a7"
            android:background="@drawable/bg_btn_publish"
            android:gravity="center"
            android:minWidth="40dp"
            android:text="@string/open"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>